--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,5 +14,7 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "installCommand": "npm install",
+  "buildCommand": "prisma generate"
 }
