--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,10 @@
-node_modules/
+# Next.js
+.next
+node_modules
 .env
+.env.local
 *.log
+.DS_Store
+
+# Old Express files (keeping for reference)
+src/
