--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,15 @@
   "name": "viet-nhat-ky-backend",
   "version": "1.0.0",
   "description": "Backend API cho ứng dụng Micro-journaling - Viết Nhật Ký",
-  "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "prisma generate",
+    "dev": "next dev",
+    "build": "prisma generate && next build",
+    "start": "next start",
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "test": "jest"
+    "lint": "next lint"
   },
   "keywords": [
     "micro-journaling",
@@ -23,16 +22,16 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "next": "^15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "swagger-ui-react": "^5.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "prisma": "^5.7.1"
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.6",
+    "prisma": "^5.7.1",
+    "typescript": "^5.7.3"
   }
 }
