--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "swagger-ui-react": "^5.18.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
