--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,6 @@ JWT_EXPIRES_IN="7d"
 
 # Server Configuration
 NEXT_PUBLIC_API_URL="http://localhost:3000"
+
+# RapidAPI Configuration (for Gemini AI)
+RAPIDAPI_KEY="your_rapidapi_key_here"
