--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,5 +10,7 @@ JWT_EXPIRES_IN="7d"
 # Server Configuration
 NEXT_PUBLIC_API_URL="http://localhost:3000"
 
-# RapidAPI Configuration (for Gemini AI)
+# RapidAPI Configuration (for AI providers)
 RAPIDAPI_KEY="your_rapidapi_key_here"
+# Choose AI provider: "chatgpt" or "gemini" (default: chatgpt)
+AI_PROVIDER="chatgpt"
