feat: implement monthly insights generation with cron job and on-demand fallback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,6 @@ NEXT_PUBLIC_API_URL="http://localhost:3000"
 RAPIDAPI_KEY="your_rapidapi_key_here"
 # Choose AI provider: "chatgpt" or "gemini" (default: chatgpt)
 AI_PROVIDER="chatgpt"
+
+# Cron Job Security (optional but recommended)
+CRON_SECRET="your_secure_random_string_for_cron_jobs"
