--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,16 @@
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "create-admin": "tsx scripts/create-admin.ts"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@prisma/client": "^5.7.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "prisma": "^5.7.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.0"
   }
 }
